--- a/contacto.html
+++ b/contacto.html
@@ -4,22 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galería | Your Restaurant </title>
+    <title>Contacto | Your Restaurant </title>
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=3.0, minimum-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/galeria.css">
+    <link rel="stylesheet" href="css/contacto.css">
     <link href="https://file.myfontastic.com/jiDyPfjESQohLr2MswX7wE/icons.css" rel="stylesheet">
 </head>
 <body>
-    <div class="modal" id="modal">
-        <div class="modal__content">
-            <img src="" alt="" class="modal__img" id="modal__img">
-        </div>
-        <div class="modal__boton" id="modal__boton">X</div>
-    </div>
-
-
-    <header class="main-header">
+  <header class="main-header">
         <div class="container container--flex">
             <div class="logo-container column column--50">
                 <h1 class="logo">Your Restaurant</h1>
@@ -40,8 +32,8 @@
             <ul class="menu" id="menu">
                 <li class="menu__item"><a href="index.html" class="menu__link menu__link">Inicio</a></li>
                 <li class="menu__item"><a href="nosotros.html" class="menu__link">Nosotros</a></li>
-                <li class="menu__item"><a href="galeria.html" class="menu__link menu__link--select">Galería</a></li>
-                <li class="menu__item"><a href="contacto.html" class="menu__link">Contacto</a></li>
+                <li class="menu__item"><a href="galeria.html" class="menu__link">Galería</a></li>
+                <li class="menu__item"><a href="contacto.html" class="menu__link menu__link--select">Contacto</a></li>
             </ul>
             <div class="social-icon">
                 <a href="" class="social-icon__link"><span class="icon-facebook"></span></a>
@@ -52,32 +44,44 @@
     </nav>
 
     <section class="banner">
-        <img src="img/banner-gallery.jpg" alt="" class="banner__img">
-        <div class="banner__content">Lo mejor de nosotros a tu servicio</div>
+        <img src="img/banner3.jpg" alt="" class="banner__img">
+        <div class="banner__content">Dejanos un mensaje</div>
     </section>
 
     <main class="main">
-      <div class="group gallery">
-        <h2 class="group__title">Nuestra Galería</h2>
+      <section class="group contact">
+        <h2 class="group__title">Contáctanos</h2>
         <div class="container container--flex">
-          <div class="column column--50-25">
-            <img src="img/Galeria/gallery.jpg" alt="" class="gallery__img gallery__img--big">
-            <img src="img/Galeria/gallery2.jpg" alt="" class="gallery__img gallery__img--small">
+          <div class="contact-information column column--50">
+            <h3 class="column__title">Información de Contacto</h3>
+            <p class="column__txt">Gracias por ponerse en contacto con nosotros en breve nuestro equipo se contactara con uds, al recibir su mensaje. Gracias por preferirnos.</p>
+            <p class="column__txt"><span class="icon-phone"></span>Teléfono 1 : +504 2540-1234</p>
+            <p class="column__txt"><span class="icon-phone"></span>Teléfono 1 : +504 2280-0000</p>
+            <p class="column__txt"><span class="icon-location"></span>San Pedro Sula, HN🇭🇳</p>
+            <p class="column__txt"><span class="icon-mail"></span>Reservaciones@google.com</p>
+            <div class="social-icon">
+              <a href="" class="social-icon__link"><span class="icon-facebook"></span></a>
+              <a href="" class="social-icon__link"><span class="icon-twitter"></span></a>
+              <a href="" class="social-icon__link"><span class="icon-mail"></span></a>
+            </div>
           </div>
-          <div class="column column--50-25">
-            <img src="img/Galeria/gallery3.jpg" alt="" class="gallery__img gallery__img--small">
-            <img src="img/Galeria/gallery4.jpg" alt="" class="gallery__img gallery__img--big">
-          </div>
-          <div class="column column--50-25">
-            <img src="img/Galeria/gallery5.jpg" alt="" class="gallery__img gallery__img--big">
-            <img src="img/Galeria/gallery6.jpg" alt="" class="gallery__img gallery__img--small">
-          </div>
-          <div class="column column--50-25">
-            <img src="img/Galeria/gallery7.jpg" alt="" class="gallery__img gallery__img--small">
-            <img src="img/Galeria/gallery8.jpg" alt="" class="gallery__img gallery__img--big">
-          </div>
+          <form action="" method="post" class="formulario column column--50">
+            <label for="" class="formulario__label">Nombre:</label>
+            <input type="text" class="formulario__input-txt" name="nombre">
+            <label for="" class="formulario__label">Correo:</label>
+            <input type="text" class="formulario__input-txt" name="correo">
+            <label for="" class="formulario__label">Teléfono:</label>
+            <input type="text" class="formulario__input-txt" name="telefono">
+            <label for="" class="formulario__label">Mensaje:</label>
+            <textarea name="mensaje" id="" cols="30" rows="10" class="formulario__textarea"></textarea>
+            <input type="submit" class="btn formulario__btn" value="Enviar">
+
+
+          </form>
         </div>
-      </div>
+      </section>
+
+      
     </main>
     
     <footer class="main-footer">
