--- a/contacto.html
+++ b/contacto.html
@@ -65,7 +65,7 @@
               <a href="" class="social-icon__link"><span class="icon-mail"></span></a>
             </div>
           </div>
-          <form action="" method="post" class="formulario column column--50">
+          <form action="enviar-prueba.php" method="post" class="formulario column column--50">
             <label for="" class="formulario__label">Nombre:</label>
             <input type="text" class="formulario__input-txt" name="nombre">
             <label for="" class="formulario__label">Correo:</label>
